k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: 
    http:
      paths:
      - path: /order
        pathType: Prefix
        backend:
          service: 
            name: order-service
              port:
                number: 5678
      - path: /refund
        pathType: Prefix
        backend:
          service: 
            name: refund-service
              port:
                number: 5678
